--- a/style.css
+++ b/style.css
@@ -1,1 +1,96 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 
+header{
+    background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.2)), url(Images/background.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+nav{
+    width: 100vw;
+    height: 100px;
+    /* background-color: azure; */
+    color: black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: bisque;
+}
+
+.Logo{
+    font-size: 1.5em;
+    color: white;
+    letter-spacing: 2px;
+    font-weight: 700;
+}
+.MB {
+    color: white;
+    padding: 0 18px;
+    text-decoration: none;
+    font-size: 28px;
+    position: relative;
+}
+.MB:before{
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    border-bottom: 2.5px solid indianred;
+    transition: 0.4s linear;
+}
+.MB:hover:before{
+    width: 95%;
+}
+.Rb{
+    background-color: indianred;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 25px;
+    border-radius: 18px;
+    transition: 0.2s none;
+}
+.Rb:hover{
+    background: transparent;
+    border: 2px solid indianred;
+}
+.headertext{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.headertext span{
+    color: white;
+    font-size: 1.3em;
+    font-weight: 400;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+.headertext h1{
+    color: white;
+    font-size: 4em;
+}
+.headertext a{
+    text-decoration: none;
+    background-color: indianred;
+    padding: 10px 20px;
+    color: white;
+    font-size: 25px;
+    letter-spacing: 5px;
+}
+.headertext a:hover{
+    background: transparent;
+    border: 2px solid indianred;
+}
+/* .MB:hover{
+    cursor: pointer;
+    border-bottom: 4px solid indianred;
+} */
